--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@source "../app";
 
 :root {
   --foreground-rgb: 22, 22, 22;
@@ -28,6 +27,7 @@ body {
 header {
   margin-bottom: 1rem;
 }
+
 header ol {
   margin: 0;
   padding: 0;
@@ -39,17 +39,19 @@ header ol {
   margin: 0 auto;
   overflow: scroll;
 }
+
 @media (min-width: 1400px) {
   header ol {
     grid-template-columns: repeat(11, 1fr);
     width: 1400px;
   }
+
   header ol li:nth-child(5) {
     grid-column: span 3;
   }
 }
+
 header li {
-  background-color: #04314c;
   /* color: white; */
   font-size: 11px;
   font-weight: 600;
@@ -59,6 +61,7 @@ header li {
   text-transform: uppercase;
   padding: 3px 0;
 }
+
 header li span {
   font-size: 10px;
   font-weight: 400;
@@ -67,13 +70,16 @@ header li span {
 .bracket {
   display: grid;
   grid-template-columns: repeat(9, 1fr);
-  grid-template-rows: repeat(94, auto);
+  grid-template-rows: repeat(94, 1fr);
   grid-gap: 2px 6px;
   grid-auto-flow: column;
   margin: 20px auto;
   /* width: 1200px; */
-  overflow-y: scroll;
+  min-height: calc(100vh - 120px);
+  max-height: calc(100vh - 120px);
+  overflow: hidden;
 }
+
 @media (min-width: 1400px) {
   .bracket {
     grid-template-columns: repeat(11, 1fr);
@@ -84,7 +90,7 @@ header li span {
 .region {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(46, auto);
+  grid-template-rows: repeat(46, 1fr);
   grid-gap: 2px 6px;
   grid-auto-flow: column;
 }
@@ -99,10 +105,11 @@ header li span {
   grid-row: 42 / span 10;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(10, auto);
+  grid-template-rows: repeat(10, 1fr);
   grid-gap: 2px 6px;
   grid-auto-flow: column;
 }
+
 @media (min-width: 1400px) {
   .final-four {
     grid-column: 5 / span 3;
@@ -134,35 +141,36 @@ ul {
 .team {
   /* background-color: white; */
   font-size: 11px;
-  /* height: 18px; */
   line-height: 1;
-  padding: 0 ;
-width:100%
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
-.team button{
+
+.team button {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
   width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 2px 4px;
 }
 
 .team-top {
-  background-color: #04314c;
   margin-bottom: 2px;
 }
-.team-bottom {
-  background-color: #333;
-}
 
-.winner {
-  background-color: #0a6fac;
-  /* color: white; */
-}
+
+
+
 
 .matchup {
   grid-column: span 1;
   grid-row: span 4;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.88);
 }
 
 .matchup-1,
@@ -352,10 +360,12 @@ width:100%
   grid-column: 2 / span 1;
   grid-row: 1 / span 4;
 }
+
 .matchup-64 {
   grid-column: 2 / span 1;
   grid-row: 7 / span 4;
 }
+
 .matchup-64 .team {
   height: 38px;
   line-height: 38px;
