--- a/app/globals.css
+++ b/app/globals.css
@@ -25,7 +25,7 @@ body {
 }
 
 header {
-  margin-bottom: 1rem;
+  margin-bottom: 1px;
 }
 
 header ol {
@@ -73,7 +73,7 @@ header li span {
   grid-template-rows: repeat(94, 1fr);
   grid-gap: 2px 6px;
   grid-auto-flow: column;
-  margin: 20px auto;
+  margin: 0 auto;
   /* width: 1200px; */
   min-height: calc(100vh - 120px);
   max-height: calc(100vh - 120px);
@@ -157,16 +157,14 @@ ul {
   height: 100%;
   display: flex;
   align-items: center;
-  padding: 2px 4px;
+  cursor: pointer;
+  padding: 0;
+  border: 1px solid #333;
 }
 
 .team-top {
   margin-bottom: 2px;
 }
-
-
-
-
 
 .matchup {
   grid-column: span 1;
